# kiri

./: .gitattributes  .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yml
bundles/: test.json
crates/kiri-asset-pipe/: Cargo.toml
crates/kiri-asset-pipe/src/: bundler.rs  desc.rs  gltf_import.rs  image_import.rs  import_effect.rs  lib.rs  pipeline.rs
crates/kiri-assets/: Cargo.toml
crates/kiri-assets/src/: bundle.rs  effect.rs  image.rs  lib.rs  material.rs  model.rs  shader.rs
crates/kiri-backend/: Cargo.toml
crates/kiri-backend/src/: error.rs  lib.rs
crates/kiri-backend/src/vulkan/: buffer.rs  device.rs  drop_list.rs  frame.rs  image.rs  instance.rs  mod.rs  physical_device.rs  swapchain.rs  uniforms.rs
crates/kiri-core/: Cargo.toml
crates/kiri-core/src/: chunky_list.rs  handle.rs  lib.rs  memory.rs  time.rs
data/effects/: unlit.json
data/shaders/: unlit_ps.hlsl  unlit_vs.hlsl
tools/builder/: Cargo.toml
tools/builder/src/: main.rs
