[package]
name = "kiri-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiri-core = { path = "../kiri-core" }
uuid = "1.5.0"
ash = "0.37.3"
siphasher = "1.0.0"
bytes = "1.5.0"
memmap2 = "0.9.0"
four-cc = "0.3.0"
lz4_flex = "0.11.1"
byteorder = "1.5.0"
serde = { version = "1.0.192", features = ["derive"] }
speedy = { version = "0.8.6", features = ["speedy-derive", "uuid"] }
